--- a/style.css
+++ b/style.css
@@ -23,8 +23,10 @@ a {
   text-underline-offset: 4px;
 }
 
-a:hover {
-  opacity: 0.7;
+@media (hover: hover) and (pointer: fine) {
+  a:hover {
+    opacity: 0.7;
+  }
 }
 
 .social-links {
