CSS approach didn't work, hard coding in fade out at 500ms

--- a/style.css
+++ b/style.css
@@ -39,6 +39,10 @@ a {
   text-decoration: none;
 }
 
+.social-links a.clicked {
+  opacity: 0.7;
+}
+
 .social-icon {
   width: 20px;
   height: 20px;
