--- a/style.css
+++ b/style.css
@@ -149,11 +149,11 @@ article h1 {
   display: block;
   font-size: 14px;
   opacity: 0.7;
-  margin-bottom: 32px;
+  margin-bottom: 24px;
 }
 
 .post-body {
-  margin-top: 32px;
+  margin-top: 0;
 }
 
 .post-body img {
@@ -242,7 +242,7 @@ article h1 {
 
 #post-date.post-date {
   display: block;
-  margin-bottom: 32px;
+  margin-bottom: 12px;
 }
 
 .back-button {
