feat: added np progress for when the user accesses one of the blog posts

--- a/style.css
+++ b/style.css
@@ -278,3 +278,12 @@ article h1 {
     font-size: 28px;
   }
 }
+
+#nprogress .bar {
+  background: white !important;
+  height: 2px !important;
+}
+
+#nprogress .spinner {
+  display: none !important;
+}
