--- a/style.css
+++ b/style.css
@@ -153,6 +153,7 @@ a {
   text-decoration: none;
   white-space: nowrap;
   margin-left: 6px;
+  padding-top: 10px; 
 }
 
 article {
@@ -220,19 +221,19 @@ article h1 {
 }
 
 .post-skeleton-title {
-  height: 32px;
+  height: 29px; 
   width: 80%;
   background: #222;
   opacity: 0.3;
-  margin-bottom: 8px;
+  margin-bottom: 8px; 
 }
 
 .post-skeleton-date {
-  height: 14px;
+  height: 22px; 
   width: 30%;
   background: #222;
   opacity: 0.3;
-  margin-bottom: 32px;
+  margin-bottom: 10px; 
 }
 
 .post-skeleton-line {
@@ -247,10 +248,30 @@ article h1 {
   width: 60%;
 }
 
+
+.post-header h1,
+#post-date.post-date,
+#post-content .post-body {
+    visibility: hidden;
+}
+
+.content-ready .post-header h1,
+.content-ready #post-date.post-date,
+.content-ready #post-content .post-body {
+    visibility: visible;
+}
+
+.content-ready .post-skeleton-title,
+.content-ready .post-skeleton-date,
+.content-ready .post-skeleton-line {
+    display: none; 
+}
+
+
 .post-header {
   display: flex;
   justify-content: space-between;
-  align-items: baseline;
+  align-items: flex-start; 
   max-width: 600px;
 }
 
